<resources>
    <string name="app_name">Scouting</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_main">Scouting</string>
    <string name="title_activity_new_profile">New Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_new_match">New Match</string>
    <string name="title_activity_match">Match</string>

    <string name="button_new_profile">New Profile</string>
    <string name="button_create_profile">Create</string>
    <string name="button_create_match">Create</string>

    <string name="data_team_number">Team Number</string>
    <string name="data_robot_type">Robot Type</string>

    <string name="label_alliance_1">Alliance 1</string>
    <string name="label_alliance_2">Alliance 2</string>

    <string name="action_undo">Undo</string>
    <string name="action_save">Save</string>
</resources>
