<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.brunoalmeida.frc2016scouting.NewProfileActivityFragment"
    tools:showIn="@layout/activity_new_profile">

    <!-- Team Number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/fragment_new_profile_text_view_width"
            android:layout_height="wrap_content"
            android:text="@string/data_team_number" />

        <EditText
            android:id="@+id/team_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

    </LinearLayout>

    <!-- Robot Type -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/fragment_new_profile_text_view_width"
            android:layout_height="wrap_content"
            android:text="@string/data_robot_type" />

        <Spinner
            android:id="@+id/robot_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/data_robot_types" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:text="@string/button_create_profile" />

</LinearLayout>
