<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.brunoalmeida.frc2016scouting.NewMatchActivityFragment"
    tools:showIn="@layout/activity_new_match">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/view_horizontal_margin"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_alliance_1" />

            <EditText
                android:id="@+id/alliance_1_team_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <EditText
                android:id="@+id/alliance_1_team_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <EditText
                android:id="@+id/alliance_1_team_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_horizontal_margin"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_alliance_2" />

            <EditText
                android:id="@+id/alliance_2_team_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <EditText
                android:id="@+id/alliance_2_team_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <EditText
                android:id="@+id/alliance_2_team_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/create_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:text="@string/button_create_match"
        android:onClick="createMatchOnClick" />

</LinearLayout>
